tests/testcases/errors/BCE0022-4.boo
"""
BCE0022-4.boo(4,17): BCE0022: Cannot convert 'System.Void' to 'System.Int32'.
"""
i as int = print("foo")
